--- a/templates/main.html
+++ b/templates/main.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid team-all">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container team-area-all">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 {{ team }}
